--- a/index.html
+++ b/index.html
@@ -100,11 +100,9 @@
                 <p class="fs-3">Sitio web en mantenimiento.</p>
                 <p class="fs-3">Disculpe las molestias.</p>
                 <br>
-                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <a
-                        href="https://wa.me/573225696559?text=Hola.%20Me%20interesa%20sus%20servicios%20de%20diseño%20web.">
-                        <button type="button" class="btn btn-success btn-lg px-4 gap-3"><i class="bi bi-whatsapp"></i>
-                            Contacto</button>
+                <div class="d-flex gap-2 mb-3 justify-content-center">
+                    <a class="link-underline-success" href="https://wa.me/573225696559?text=Hola.%20Me%20interesa%20sus%20servicios%20de%20diseño%20web.">
+                        <button type="button" class="d-flex btn btn-success btn-lg"><i class="bi bi-whatsapp pe-2"></i> Contacto</button>
                     </a>
                 </div>
                 <br>
